fix: modal dialog overflow

--- a/src/Modal/_ModalDialog.scss
+++ b/src/Modal/_ModalDialog.scss
@@ -40,10 +40,10 @@
   }
 
   &.pgn__modal-visible-overflow {
-    overflow: visible;
+    overflow-y: visible;
 
     .pgn__modal-body {
-      overflow: visible;
+      overflow-y: visible;
     }
   }
 }
